Migrate to AssertJ
# Conflicts:
#	uaa/src/test/java/org/cloudfoundry/identity/uaa/integration/feature/LdapLoginIT.java
#	uaa/src/test/java/org/cloudfoundry/identity/uaa/mock/providers/IdentityProviderEndpointsMockMvcTests.java

# Conflicts:
#	uaa/src/test/java/org/cloudfoundry/identity/uaa/mock/audit/AuditCheckMockMvcTests.java